--- a/机试题/北航机试总结.md
+++ b/机试题/北航机试总结.md
@@ -87,6 +87,8 @@ int main(){
 
 ## 文件操作
 
+
+
 ### 从文件中读
 
 ```c
@@ -150,6 +152,54 @@ int main(){
 	}
 	fclose(fp1);
 	return 0;
+}
+```
+
+## 字符串匹配
+
+
+
+## 整型数组去重
+
+```c
+for(int i=0;i<len1-1;i++){
+		for(int j=i+1;j<len1;j++){
+			if(a[i]==a[j]){
+				for(int m=j;m<len1-1;m++){
+					a[m]=a[m+1];
+				}
+				j--;
+				len1--;
+			}
+		}
+	}
+```
+
+## 动态分配存储空间
+
+```c
+int n;
+scanf("%d",&n);
+int *array=(int*)malloc(sizeof(int)*n);
+```
+
+## 结构体
+
+### 定义
+
+```c
+#include<iostream>
+struct student{
+    string name;
+    double score;
+};
+
+int main(){
+    int n=3;
+    struct student stu[n];
+    for(int i=0;i<n;i++){
+        cin>>stu[i].name>>stu[i].score;
+    }
 }
 ```
 
